[package]
name = "nsbench"
version = "0.2.0"
authors = ["Erik Hollensbe <git@hollensbe.org>"]
edition = "2021"

[dependencies]
hickory-proto = "0.25"
hdrhistogram = "7.5"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
argh = "0.1"

[profile.release]
lto = true
