[package]
name = "nsbench"
version = "0.3.0"
authors = ["Erik Hollensbe <git@hollensbe.org>"]
edition = "2021"
description = "A high-performance DNS server benchmarking tool"
license = "MIT"
repository = "https://github.com/erikh/nsbench"
readme = "README.md"
keywords = ["dns", "benchmark", "nameserver", "performance", "network"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
hickory-proto = "0.25"
hdrhistogram = "7.5"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
argh = "0.1"

[profile.release]
lto = true
